Gap fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -731,7 +731,7 @@ footer {
     z-index: 1000;
     justify-content: center;
     align-items: center;
-    gap: 80px;
+    gap: 30px;
     padding: 16px 8px 24px 8px;
   }
   .mobile-menu img {
@@ -743,7 +743,6 @@ footer {
     text-decoration: none;
     color: rgba(0, 0, 0, 1);
   }
-
   .mobile-menu a.active {
     color: rgba(38, 89, 195, 1);
   }
